changes pushed from multidomain

--- a/src/assets/scss/_avenirTheme.scss
+++ b/src/assets/scss/_avenirTheme.scss
@@ -792,9 +792,9 @@ div:where(.swal2-container) .swal2-select {
     // height: calc(100vh - 130px) !important;
 }
 
-.home-main .sum-content .sumry-content{
-    margin-top: 9px !important;
-}
+// .home-main .sum-content .sumry-content{
+//     margin-top: 9px !important;
+// }
 
 .not-emu .signoff-modal-content .list-of-questions{
     height: calc(100vh - 412px) !important;
