--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -240,6 +240,18 @@
   .card-body.tab-pane {
     padding: 0px 0px 0px 16px !important;
 
+
+  //  .default-dataemu .collapse{
+  //    border-color: transparent !important;
+  //  }
+
+  // .default-emu .default-mapping .collapse{
+  //  border-color: transparent !important;
+  // }
+
+  .border-transparent{
+   border-color: transparent !important;
+  }
     .md_nested_tabs {
       padding: 3%;
       padding-left: 1% !important;
