changes into fp data pro

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -212,6 +212,18 @@ strong{
 }
 
 
+.before {
+  page-break-before: always !important;
+}
+.after {
+  page-break-after: always !important;
+  page-break-inside: avoid !important;
+}
+.avoid {
+  page-break-inside: avoid !important;
+}
+
+
 // .form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label{
 //   color: var(--text-color) !important;
 // }
