changes to main branch from dev branch

--- a/src/assets/scss/_commonCss.scss
+++ b/src/assets/scss/_commonCss.scss
@@ -36,6 +36,7 @@ p {
 ::-webkit-scrollbar {
 	width: 7px !important;
 	height: 10px;
+	
 	// cursor: pointer; 
 
 }
@@ -66,6 +67,8 @@ p {
 	border: 10px solid transparent;
 }
 
+
+
 // .integratedFamilyWrap::-webkit-scrollbar-track{
 // 	background-color: var(--primary-bg-color) !important;
 // }
@@ -80,8 +83,8 @@ p {
 
 /* scrollbar for firefox */
 * {
-    scrollbar-color: rgba(0, 0, 0, .5) 0 0 1px rgba(255, 255, 255, .5);
-    scrollbar-width: thin;
+    // scrollbar-color: rgba(0, 0, 0, .5) 0 0 1px rgba(255, 255, 255, .5);
+    // scrollbar-width: thin;
 }
 /* scrollbar for firefox end */
 
