--- a/src/assets/scss/_reports.scss
+++ b/src/assets/scss/_reports.scss
@@ -129,7 +129,7 @@
   .saved-report-card-opt {
     flex           : 1 1 69%;
     display        : flex !important;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items    : center;
   }
 
