--- a/src/assets/scss/newcss.scss
+++ b/src/assets/scss/newcss.scss
@@ -1252,4 +1252,11 @@
     color: var(--text-color) !important;
 }
 
-
+.mentionable textarea{
+ background-color: var(--chart-body-color);
+ border-color: var(--chart-body-color);
+ width: 100%;
+ border-radius: 5px;
+ padding-left: 10px;
+ padding-right: 10px;
+}
