changes from fp mch to fp data pro

--- a/src/assets/scss/newcss.scss
+++ b/src/assets/scss/newcss.scss
@@ -462,7 +462,10 @@
 
 .dropdown-home{
     transform: translate3d(-238px, 39px, 0px) !important;
-    
+}
+
+.dropdown-home-comment{
+    transform: translate3d(-670px, 39px, 0px) !important;
 }
 
 .dropdown-menus{
